app.py and linearRegression.py added in the app folder.

--- a/code/A2-prediction.ipynb
+++ b/code/A2-prediction.ipynb
@@ -44,6 +44,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### from previous assignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Data Loading"
    ]
   },
@@ -1886,7 +1893,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A2"
+    "### A2"
    ]
   },
   {
@@ -6605,13 +6612,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Inference"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 226,
    "metadata": {},
@@ -6644,6 +6644,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Inference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 227,
    "metadata": {},
@@ -6658,19 +6665,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the scaler to disk\n",
+    "# save the scaler to disk as a pickle file\n",
     "pickle.dump(scaler, open('../model/a2_scaled.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Creating sample data"
    ]
   },
   {
@@ -6690,6 +6690,7 @@
     }
    ],
    "source": [
+    "# Creating a sample input\n",
     "sampledata = {\n",
     "    \"engine\": [2000],\n",
     "    \"mileage\": [27],\n",
@@ -6699,40 +6700,40 @@
     "\n",
     "new_model = pickle.load(open(\"../model/car_A2.pkl\", 'rb'))\n",
     "\n",
-    "# convert to data frame\n",
+    "# converting the sampledata to data frame\n",
     "sampledata = pd.DataFrame(sampledata)\n",
     "\n",
-    "# predicting the car selling price\n",
+    "# predicting the selling price of the car\n",
     "np.exp(new_model.predict(X_test).values[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "engine         1248.0\n",
-       "mileage          19.3\n",
-       "km_driven    140000.0\n",
-       "year           2009.0\n",
-       "Name: 12, dtype: float64"
+       "engine        1197.00\n",
+       "mileage         21.01\n",
+       "km_driven    16500.00\n",
+       "year          2019.00\n",
+       "Name: 300, dtype: float64"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_encoded[['engine', 'mileage', 'km_driven', 'year']].loc[12]"
+    "df_encoded[['engine', 'mileage', 'km_driven', 'year']].loc[300]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6742,23 +6743,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(5390.905324162119)"
+       "np.float64(25163.849096428086)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "feature_names = ['engine', 'mileage', 'km_driven', 'year']\n",
-    "sample_np = np.array([[1248.0, 19.3, 140000.0, 2009.0]])\n",
+    "sample_np = np.array([[1197.00, 21.01, 16500.00, 2019.00]])\n",
     "sample_df = pd.DataFrame(sample_np, columns=feature_names)\n",
     "\n",
     "sample_df[no_of_cols]= scaler.transform(sample_df[no_of_cols])\n",
@@ -6769,23 +6770,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(280000)"
+       "np.int64(185000)"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# actual price\n",
-    "df_encoded['selling_price'].loc[12]"
+    "df_encoded['selling_price'].loc[100]"
    ]
   },
   {
