changes made in the path for the docker file.

--- a/code/A2-prediction.ipynb
+++ b/code/A2-prediction.ipynb
@@ -6778,7 +6778,7 @@
    "source": [
     "##### Summary\n",
     "\n",
-    "In this project, I modified the LinearRegression class by implementing a function to compute the R² score, which evaluates the model’s goodness of fit. I also added options for weight initialization, allowing the user to choose between zero or Xavier initialization, the latter providing a better starting point for training. Additionally, I incorporated momentum into the gradient descent process to improve convergence speed and reduce oscillations. Lastly, I created a feature importance function to visualize the impact of each feature based on the model's coefficients. These updates were then tested using cross-validation in an experiment with multiple models and configurations, including momentum, initialization methods, and learning rates."
+    "In this Assignment A2, changes were made in the LinearRegression class by implementing a function to compute the R² score, which evaluates the model’s goodness of fit. As per the task  options for weight initialization was added, allowing the user to choose between zero or Xavier initialization, the latter providing a better starting point for training. Additionally, I incorporated momentum into the gradient descent process to improve convergence speed and reduce oscillations. Lastly, I created a feature importance function to visualize the impact of each feature based on the model's coefficients. These updates were then tested using cross-validation in an experiment with multiple models and configurations, including momentum, initialization methods, and learning rates."
    ]
   },
   {
