Findings section in report added, readme file created.

--- a/code/A2-prediction.ipynb
+++ b/code/A2-prediction.ipynb
@@ -6778,7 +6778,20 @@
    "source": [
     "##### Summary\n",
     "\n",
-    "In this Assignment A2, changes were made in the LinearRegression class by implementing a function to compute the R² score, which evaluates the model’s goodness of fit. As per the task  options for weight initialization was added, allowing the user to choose between zero or Xavier initialization, the latter providing a better starting point for training. Additionally, I incorporated momentum into the gradient descent process to improve convergence speed and reduce oscillations. Lastly, I created a feature importance function to visualize the impact of each feature based on the model's coefficients. These updates were then tested using cross-validation in an experiment with multiple models and configurations, including momentum, initialization methods, and learning rates."
+    "In this Assignment A2, changes were made in the LinearRegression class by implementing a function to compute the R² score, which evaluates the model’s goodness of fit. As per the tasks,  options for weight initialization was added, allowing the user to choose between zero or Xavier initialization. Additionally, momentum was incorporated into the gradient descent process to improve convergence speed and reduce oscillations. At last feature importance function was created to visualize the impact of each feature based on the model's coefficients. These updates were then tested using cross-validation in an experiment with multiple models and configurations, including momentum, initialization methods, and learning rates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Findings\n",
+    "\n",
+    "As part of the task, various models (Polynomial Regression, Lasso Regression, Ridge Regression and Normal(Standard) Regression) were implemented and compared. After comparison of value of mse and r2 the Best Model Found to be Normal regression with MSE: 0.8789041439066244 and R2: -0.24141675428458784. \n",
+    "\n",
+    "\n",
+    "The parameters in the best model were mini-batch as its method, learning rate of 0.01, lambda value of 0.1 weight as xavier and no momentum and polynomial.\n",
+    "\n"
    ]
   },
   {
@@ -6792,18 +6805,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ML Flow experiment Tracking\n",
+    "##### A. ML Flow experiment Tracking\n",
+    "![MLFlow dashboard screenshot](../screenshots/mlflow-dashboard.png)\n",
     "\n",
-    "![MLFlow dashboard screenshot](../screenshots/mlflow-dashboard.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Model Comparison in MLflow\n",
     "\n",
-    "![mlflow compare](../screenshots/mlflow-compare.png)\n"
+    "##### B. Model Comparison in MLFlow\n",
+    "![mlflow compare](../screenshots/mlflow-compare.png)"
    ]
   },
   {
